2012-06-07  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_internal_authenticate): Add check for input
	length.

	Implement key generation.
	* src/openpgp.c (cmd_pgp_gakp): Call gpg_do_keygen.
	* src/openpgp-do.c (proc_key_import): Call with modulus = NULL.
	(gpg_do_keygen): New function.
	(gpg_reset_digital_signature_counter): New function.
	(gpg_do_write_prvkey): New argument MODULUS.  Call
	gpg_reset_digital_signature_counter.
	* src/call-rsa.c (rsa_genkey): New function.
	* src/random.c (random_byte): New function.

	PolarSSL modification.
	* polarssl-0.14.0/library/rsa.c (rsa_gen_key): Don't set D, DP,
	DQ, and QP.  It's only for key generation.
	* polarssl-0.14.0/library/rsa.c (rsa_gen_key, rsa_pkcs1_encrypt):
	Change f_rng function return type.
	* polarssl-0.14.0/include/polarssl/rsa.h: Likewise.
	* polarssl-0.14.0/library/bignum.c (mpi_is_prime, mpi_gen_prime):
	Change f_rng function return type.
	* polarssl-0.14.0/include/polarssl/bignum.h: Likewise.

2012-06-06  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.19.

	* src/usb_desc.c (gnukStringSerial): Updated.

	* regnual/regnual.c (fetch): Better implementation.

2012-06-05  Niibe Yutaka  <gniibe@fsij.org>

	Firmware update key handling.
	* tool/gnuk_put_binary.py (GnukToken.cmd_get_response): Handle
	larger data such as card holder certificate.
	(GnukToken.cmd_write_binary): Bug fix for cert do write.
	(GnukToken.cmd_read_binary): New.
	(main): Support firmware update key.

	Take advantage of the Thumb-2 "rbit" instruction.
	* regnual/regnual.c (fetch): Reverse bits.
	* src/usb_ctrl.c (rbit): New.  Deleted reverse32.
	(download_check_crc32): Use rbit.
	* tool/gnuk_upgrade.py (crc32): Just use binascii.crc32.
	(crctab): Remove.

2012-06-04  Niibe Yutaka  <gniibe@fsij.org>

	Card holder certificate data object bug fixes.
	* tool/gnuk_put_binary_libusb.py (gnuk_token.cmd_get_response):
	Handle larger data such as card holder certificate.
	* src/flash.c (flash_write_binary): Bug fix.  Call